--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
 				<!-- Form -->
 				<section>
 					<h3>Coding Challenge</h3>
-					<p>This is a interface where user could modify the array.
-						When the array is modified, user receives feedback if game is winnable and most efficient path.
-						The Play Function requires:</p>
+					<p>This is a game where user can modify an array.
+						When the array is modified, user receives feedback if game is winnable and the most efficient path is shown.
+						The Game requires:</p>
 					<ol class="alt">
 						<li>Accepting array as input parameter</li>
 						<li>Determining if the goal is reachable</li>
 						<li>Providing most efficient path.</li>
 					</ol>
 					<hr />
+					<h4>Examples</h4>
+					<img src="init/images/example.png" alt="example" />
 				</section>
 			</section>
 
