--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Contact | AdeoWeb What To Wear Today? &trade; - Coding Challenge by Amr Farouq</title>
+	<title>Contact | | Danske Bank Group IT - Coding Challenge by Amr Farouq<</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
