--- a/how_it_works.html
+++ b/how_it_works.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>How It Works? | AdeoWeb What To Wear Today &trade; - Coding Challenge by Amr Farouq</title>
+	<title>How It Works? | Danske Bank Group IT - Coding Challenge by Amr Farouq<</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
