--- a/play.html
+++ b/play.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Home | Danske Bank Group IT - Coding Challenge by Amr Farouq</title>
+	<title>Play | Danske Bank Group IT - Coding Challenge by Amr Farouq</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -46,7 +46,7 @@
 	<!-- Main -->
 	<section id="main" class="wrapper style1">
 		<header class="major">
-			<h2>Danske Bank Group IT - Coding Challenge | Home</h2>
+			<h2>Danske Bank Group IT - Coding Challenge | Play</h2>
 			<h3><span><img src="init/images/logo.png" alt="logo" width="250px;" /></span></h3>
 		</header>
 		<div class="container">
