--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Home | AdeoWeb What To Wear Today &trade; - Coding Challenge by Amr Farouq</title>
+	<title>Privacy | Danske Bank Group IT - Coding Challenge by Amr Farouq</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -45,7 +45,7 @@
 	<!-- Main -->
 	<section id="main" class="wrapper style1">
 		<header class="major">
-			<h2>AdeoWeb - What To Wear Today? &trade; | Privacy Policy</h2>
+			<h2>Danske Bank Group IT - Coding Challenge | Privacy Policy</h2>
 			<h3><span><img src="init/images/logo.png" alt="logo" width="250px;"/></span></h3>
 		</header>
 		<div class="container">
