--- a/play.html
+++ b/play.html
@@ -69,7 +69,7 @@
 					<ul class="actions fit" id="buttonStartID" style="display: none;">
 						<li><a onclick="buttonStartClicked()" class="button special fit">Start</a></li>
 					</ul>
-					
+
 					<hr />
 				</section>
 			</section>
@@ -102,7 +102,7 @@
 					inputVar.addEventListener('input', checkValue);
 					document.getElementById("results").appendChild(inputVar);
 					document.getElementById("results").appendChild(br);
-				}	
+				}
 				document.getElementById("buttonStartID").style.display = "block";
 
 			} else {
@@ -117,8 +117,9 @@
 
 		}
 
+		
 		function checkValue(e) {
-			var regex=/^[0-9]+$/;
+			var regex = /^[0-9]+$/;
 			var x = e.target.value;
 
 			if (!x.match(regex)) {
@@ -132,9 +133,47 @@
 			}
 		}
 
-		function buttonStartClicked(){
-			alert('Started');
+		function buttonStartClicked() {
+			var inputNumbersArray = [];
+			var currentPosition = 0;
+
+			var allInputs = document.getElementsByTagName("input");
+			for (var i = 0; i < allInputs.length; i++) {
+				inputNumbersArray.push(allInputs[i].value);
+			}
+
+			solve(currentPosition, inputNumbersArray);
+
 		}
+
+		function solve(currentPositionValue, inputNumbersArrayValues) {
+
+			if (currentPositionValue == inputNumbersArrayValues.length - 1) {
+				return true;
+			}
+
+			if (inputNumbersArrayValues[currentPositionValue] == 0) {
+				return false;
+			}
+
+			rv = false; // Results
+
+			// alert(JSON.stringify(inputNumbersArrayValues));
+
+			for (var jump = 1; jump <= inputNumbersArrayValues[currentPositionValue]; jump++) {
+
+				if (currentPositionValue + jump < inputNumbersArrayValues.length) {
+
+					rv = rv || solve(currentPositionValue + jump, inputNumbersArrayValues);
+
+				}
+			}
+			alert(rv);
+		}
+
+
+
+		
 
 	</script>
 
