--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</ul>
 		</nav>
 	</header>
-
+	<button onclick="topFunction()" id="myTopBtn" title="Go to top">Top</button>
 	<!-- Main -->
 	<section id="main" class="wrapper style1">
 		<header class="major">
