--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -41,7 +41,7 @@
 			</ul>
 		</nav>
 	</header>
-
+	<button onclick="topFunction()" id="myTopBtn" title="Go to top">Top</button>	
 	<!-- Main -->
 	<section id="main" class="wrapper style1">
 		<header class="major">
