--- a/play.html
+++ b/play.html
@@ -144,7 +144,8 @@
 				inputNumbersArray.push(allInputs[i].value);
 			}
 
-			solve(currentPosition, inputNumbersArray);
+			console.log(solve(currentPosition, inputNumbersArray));
+			
 
 		}
 
@@ -168,7 +169,8 @@
 
 				}
 			}
-			console.log(rv);
+			
+			return rv;
 		
 		}
 
