--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 				<section>
 					<h3>Coding Challenge</h3>
 					<p>This is a game where user can modify an array.
-						When the array is modified, user receives feedback if game is winnable and the most efficient path is shown.
+						When the array is modified, user receives feedback if game is winnable and the game output is shown.
 						The Game requires:</p>
 					<ol class="alt">
 						<li>Accepting array as input parameter</li>
 						<li>Determining if the goal is reachable</li>
-						<li>Providing most efficient path.</li>
+						<li>Display Game Output.</li>
 					</ol>
 					<hr />
 					<h4>Examples</h4>
