--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</ol>
 					<hr />
 					<h4>Examples</h4>
-					<img src="init/images/example.png" alt="example" />
+					<img src="init/images/example.png" alt="example" class="imgResponsive"/>
 				</section>
 			</section>
 
