--- a/play.html
+++ b/play.html
@@ -58,15 +58,15 @@
 					<h3 style="text-align: center;">Start Playing</h3>
 					<br>
 
-					<ul class="actions fit">
-						<li><a onclick="enterNumberOfElementsFunc()" class="button special fit">Enter Number of Elements
-								to Play With</a></li>
-						<li><a onclick="resetNumbers()" class="button fit">Reset</a></li>
-					</ul>
+					<ul class="actions" id="homeButtons">
+                        <li><a onclick="enterNumberOfElementsFunc()" class="button special fit">Enter Number of Elements
+							</a></li>
+                        <li><a onclick="resetNumbers()" class="button special fit">Reset</a></li>
+                    </ul>
 
 					<p id="results"></p>
 
-					<ul class="actions fit" id="buttonStartID" style="display: none;">
+					<ul class="actions" id="buttonStartID" style="display: none;">
 						<li><a onclick="buttonStartClicked()" class="button special fit">Start</a></li>
 					</ul>
 
